--- a/karya-mu.html
+++ b/karya-mu.html
@@ -16,12 +16,16 @@
         <!-- Start CSS -->
         <link rel="stylesheet" href="../asna-css/css/style.css">
         <!-- Start CSS -->
+
+        <!-- Start JS -->
+        <script src="js/function.js"></script>
+        <!-- Start JS -->
     </head>
     <body>
         <!-- Start Logo -->
         <div class="container logo">
                 <a href="index.html" title="logo Faka Design">
-                <img src="image/logo-faka-web-menulis.jpg" alt="Logo Faka Design" width="300">
+                <img src="image/logo-faka-web-menulis.png" alt="Logo Faka Design" width="300">
                 </a>
             </div> 
             <!-- End Logo -->
@@ -102,7 +106,6 @@
 
         <!-- Start Registrasi -->
         <div class="container">
-            <ol>
                 <li>
                     <div class="box-heading">
                         <h2>Feed Back</h2>
@@ -131,7 +134,6 @@
                         </ul>
                     </div>
                 </li>
-            </ol>
         </div>
         <!-- End Registrasi -->
 
