--- a/kontribusi.html
+++ b/kontribusi.html
@@ -16,12 +16,16 @@
         <!-- Start CSS -->
         <link rel="stylesheet" href="../asna-css/css/style.css">
         <!-- Start CSS -->
+
+        <!-- Start JS -->
+        <script src="js/function.js"></script>
+        <!-- Start JS -->
     </head>
     <body>
         <!-- Start Logo -->
         <div class="container logo">
                 <a href="index.html" title="logo Faka Design">
-                <img src="image/logo-faka-web-menulis.jpg" alt="Logo Faka Design" width="300">
+                <img src="image/logo-faka-web-menulis.png" alt="Logo Faka Design" width="300">
                 </a>
             </div> 
             <!-- End Logo -->
@@ -70,58 +74,58 @@
                 <h3>Tulis CV kamu di sini!</h3>
             </div>
             <div class="box-isi">
-                <form action="" class="Contact-form">
+                <form action="https://formspree.io/minahulasna@gmail.com/" method="POST">
                     <div>
                         <label for="nama">Nama Lengkap</label>
                         <br>
                         <input type="text" placeholder="Nama Lengkap" size="58" name="nama" id="nama">
                     </div>
 
-                    <br><br>
+                    <br>
                     <div>
                         <label for="kota">Kota Asal</label>
                         <br>
                         <input type="text" placeholder="Kota Asal" size="58" name="kota" id="kota">
                     </div>
 
-                    <br><br>
+                    <br>
                     <div>
                         <label for="email">Email</label>
                         <br>
                         <input type="email" placeholder="example@example.ex" size="58" name="email" id="email">
                     </div>
 
-                    <br><br>
+                    <br>
                     <div>
                         <label for="pendidikan">Pendidikan</label>
                         <br>
                         <input type="pendidikan" placeholder="Pendidikan" size="58" name="pendidikan" id="pendidikan">
                     </div>
 
-                    <br><br>
+                    <br>
                     <div>
                         <label for="motto">Motto Hidup</label>
                         <br>
                         <input type="motto" placeholder="Motto Hidup" size="58" name="motto" id="motto">
                     </div>
 
-                    <br><br>
+                    <br>
                     <div>
                         <label for="jenis-kontribusi">Jenis Kontribusi</label>
                         <br>
                         <input type="kontributor" placeholder="Kontributor" size="58" name="kontributor" id="kontributor">
                     </div>
 
-                    <br><br>
+                    <br>
                     <div>
                         <h3>Tulis karyamu di sini!</h3>
 
                         <label for="karya">Iya, Di sini</label>
                         <br>
-                        <textarea name="karya" id="karya" cols="46" rows="10" type="karya" placeholder="Di Sini"></textarea>
+                        <textarea name="karya" id="karya" cols="60" rows="10" type="karya" placeholder="Di Sini"></textarea>
                     </div>
 
-                    <br><br>
+                    <br>
                     <div>
                         <input type="submit" name="kirim" id="kirim" size="50" value="Kirim">
                     </div>
@@ -131,44 +135,115 @@
         <!-- End Form CV -->
 
         <!-- Start Tabel Kontributor Tetap -->
-        <div class="container">
-            <div class="box-heading">
-                <h4>Jadilah kontribusitor Kami</h4>
-            </div>
-            <div class="box-isi">
-                <h5>Dengan menjadi kontributor kami, anda akan mendapat beberapa keuntungan</h5>
-                <table border="1" cellpadding="10" class="table-jenis">
-                    <thead>
-                        <tr>
-                            <th>Jenis Kontribusi</th>
-                            <th>Kontributor Tetap</th>
-                            <th>Kontributor Percobaan</th>
-                            <th>Kontributor Biasa</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Gaji per-artikel</td>
-                            <td>Rp. 100.000</td>
-                            <td>Rp. 50.000</td>
-                            <td>Rp. 25.000</td>
-                        </tr>
-                        <tr>
-                                <td>Gaji per-bulan</td>
-                                <td>Rp. 500.000</td>
-                                <td>Rp. 100.000</td>
-                                <td>x</td>
-                            </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td>Biaya Registrasi</td>
-                            <td>Rp. 100.000</td>
-                            <td>Rp. 50.000</td>
-                            <td>x</td>
-                        </tr>
-                    </tfoot>
-                </table>
+        <div class="container tengah">
+            <div class="snip1214">
+                <div class="plan">
+                    <header>
+                        <h4 class="plan-title">Starter
+                        </h4><i class="ion-ios-navigate-outline"></i>
+                        <div class="plan-cost"><span class="plan-price">$19</span><span class="plan-type">/month</span></div>
+                        <h4 class="plan-title">
+                        Kontributor Tetap
+                        </h4><i class="ion-ios-navigate-outline"></i>
+                        <div class="plan-cost"><span class="plan-price">Gaji: Rp.500.000</span><span class="plan-type">/Bulan</span></div>
+                    </header>
+                    <ul class="plan-features">
+                        <li>
+                        </li>
+                        <li><span class="plan-price">Rp.100.000</span><span class="plan-type">/Artikel</span>
+                        </li>
+                        <li>Kursus Online selama 4 Bulan
+                        </li>
+                        <li>Sertifikasi
+                        </li>
+                        <li>ID Card
+                    </ul>
+                    <div class="plan-select"><a href="">Daftar</a></div>
+                </div> <div class="plan">
+                    <header>
+                        <h4 class="plan-title">Starter
+                        </h4><i class="ion-ios-navigate-outline"></i>
+                        <div class="plan-cost"><span class="plan-price">$19</span><span class="plan-type">/month</span></div>
+                        <h4 class="plan-title">
+                        Kontributor Tetap
+                        </h4><i class="ion-ios-navigate-outline"></i>
+                        <div class="plan-cost"><span class="plan-price">Gaji: Rp.500.000</span><span class="plan-type">/Bulan</span></div>
+                    </header>
+                    <ul class="plan-features">
+                        <li>
+                        </li>
+                        <li><span class="plan-price">Rp.100.000</span><span class="plan-type">/Artikel</span>
+                        </li>
+                        <li>Kursus Online selama 4 Bulan
+                        </li>
+                        <li>Sertifikasi
+                        </li>
+                        <li>ID Card
+                    </ul>
+                    <div class="plan-select"><a href="">Daftar</a></div>
+                </div> <div class="plan">
+                    <header>
+                        <h4 class="plan-title">Starter
+                        </h4><i class="ion-ios-navigate-outline"></i>
+                        <div class="plan-cost"><span class="plan-price">$19</span><span class="plan-type">/month</span></div>
+                        <h4 class="plan-title">
+                        Kontributor Tetap
+                        </h4><i class="ion-ios-navigate-outline"></i>
+                        <div class="plan-cost"><span class="plan-price">Gaji: Rp.500.000</span><span class="plan-type">/Bulan</span></div>
+                    </header>
+                    <ul class="plan-features">
+                        <li>
+                        </li>
+                        <li><span class="plan-price">Rp.100.000</span><span class="plan-type">/Artikel</span>
+                        </li>
+                        <li>Kursus Online selama 4 Bulan
+                        </li>
+                        <li>Sertifikasi
+                        </li>
+                        <li>ID Card
+                    </ul>
+                    <div class="plan-select"><a href="">Daftar</a></div>
+                </div>
+                <!-- <div class="plan">
+                    <header>
+                        <h4 class="plan-title">
+                        Kontributor Percobaan
+                        </h4><i class="ion-ios-navigate-outline"></i>
+                        <div class="plan-cost"><span class="plan-price">Gaji: Rp.100.000</span><span class="plan-type">/Bulan</span></div>
+                    </header>
+                    <ul class="plan-features">
+                        <li>
+                        </li>
+                        <li><span class="plan-price">Rp.50.000</span><span class="plan-type">/Artikel</span>
+                        </li>
+                        <li>-
+                        </li>
+                        <li>Sertifikasi
+                        </li>
+                        <li>ID Card Sementara
+                    </ul>
+                    <div class="plan-select"><a href="">Daftar</a></div>
+                </div>
+                <div class="plan">
+                        <header>
+                            <h4 class="plan-title">
+                            Kontributor Biasa
+                            </h4><i class="ion-ios-navigate-outline"></i>
+                            <div class="plan-cost"><span class="plan-price">Gaji: Rp.0</span><span class="plan-type">/Bulan</span></div>
+                        </header>
+                        <ul class="plan-features">
+                            <li>
+                            </li>
+                            <li><span class="plan-price">Rp.25.000</span><span class="plan-type">/Artikel</span>
+                            </li>
+                            <li>-
+                            </li>
+                            <li>Sertifikasi
+                            </li>
+                            <li>-
+                        </ul>
+                        <div class="plan-select"><a href="">Daftar</a></div>
+                </div> -->
             </div>
         </div>
         <!-- Start Tabel Kontributor Tetap -->
