--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -16,12 +16,16 @@
         <!-- Start CSS -->
         <link rel="stylesheet" href="../asna-css/css/style.css">
         <!-- Start CSS -->
+
+        <!-- Start JS -->
+        <script src="js/function.js"></script>
+        <!-- Start JS -->
     </head>
     <body>
        <!-- Start Logo -->
        <div class="container logo">
             <a href="index.html" title="logo Faka Design">
-            <img src="image/logo-faka-web-menulis.jpg" alt="Logo Faka Design" width="300">
+            <img src="image/logo-faka-web-menulis.png" alt="Logo Faka Design" width="300">
             </a>
         </div> 
         <!-- End Logo -->
@@ -63,6 +67,50 @@
                 </h4>
             </div>
         <!-- End Breadcrumbs -->
+
+        <!-- Start Tentang -->
+        <div class="container">
+            <h2>Kami@World</h2>
+            <p>
+                World The Animation adalah komunitas yang bertujuan untuk mengobarkan literasi orang-orang yang terpilih.<br> Kenapa dalam hal ini penulis menyebutnya "orang-orang terpilih", karena minat baca dan tulis di Tebuireng,<br> Ma'had Aly khususnya, penulis anggap masih sangat minim. Perlu beberapa waktu yang tidak sebentar untuk<br>
+                menumbuhkan kesadaran tersebut sekaligus menanamkan konsistensi mereka.<br><br>
+                Menyokong sebuah almamater Tebuireng dan lebih-lebih Ma'had Aly yang mempunyai Visi dan Misi mencetak kader<br>
+                ulama dirasa sangat lah tidak etis jikalau kita tidak mengenal secara mendalam tokoh-tokoh yang membangun<br>
+                ke-tebuireng-an dari awal hingga sekarang. Dan juga dianggap kurang etis jikalau seorang ulama, atau bisa kita<br>
+                sebut kaum terpelajar memiliki skill menulis yang sangat minim. Oleh karena itu, di dalamnya kita belajar untuk<br>
+                konsisten dalam membaca dan menulis.Ada 2 pembahasan inti dalam komunitas ini, yaitu kelas membaca yang<br>
+                mendiskusikan tentang tokoh-tokoh di Tebuireng, mulai dari pendiri, Hadratussyaikh KH. M. Hasyim Asy'ari,<br>
+                KH. Abdul Wahid Hasyim, KH. Abdurrahman Wahid, dll. Dan pembahasan yang kedua adalah tentang kepenulisan meliputi<br>
+                tiga jenis literatur yaitu : Resensi, Opini, dan Essai. <br><br>
+                Komunitas ini bisa dikatakan terbentuk dari hal yang tidak disangka-sangka. Awalnya pada akhir bulan September 2018,<br>
+                penulis sowan ke kediaman Ahmad Faozan hanya sekedar untuk memberikan bisyaroh dari suatu acara dan kami berbincang-<br>
+                bincang banyak hal tentang perkembangan literasi dan Tebuireng. Ternyata sowan tersebut tidak hanya menjadi suatu<br>
+                yang biasa. Hal tersebut ternyata membangkitkan mengobarkan jiwa seorang Mas Fao yang pernah padam untuk kembali<br>
+                berjuang menumbuhkan kesadaran baca di Tebuireng. <br><br>
+                Singkat cerita Beliau (Mas Fao) meminta kepada penulis mengajak beberapa teman untuk membuat sebuah komunitas.<br>
+                Memang tidaklah mudah mengajak beberapa teman dan menyatukan aspirasi untuk bisa membentuk komunitas ini. <br>
+                Atas izin Allah swt. Alhamdulillah penulis berhasil mengajak 5 orang yang dianggap memiliki semangat dan keinginan<br>
+                yang cukup dalam membaca dan menulis. <br><br>
+                Orang-orang terpilih yang terdiri dari teman-teman sekelas penulis di Ma'had Aly Hasyim Asy'ari itu adalah : Abdul<br>
+                Haris (Lampung), Viki Junianto (Jombang), Zainul Irfan (Mojokerto), Jailani (Madura), dan M. Yusuf Syafiq (Jember).<br>
+                 Meski tidak semua, bisa istiqomah mengikuti komunitas ini namun mereka patut diapresiasi karena telah ingin dan<br>
+                 ikut andil dalam awal membangun pondasi awal Komunitas ini. Semoga komunitas ini dapat berkembang dan mencapai<br>
+                 tujuannya berdiri dengan sebenar-benarnya, Amiin. <br><br>
+                Komunitas ini memakai metode diskusi. Karena diskusi lah yang dianggap metode yang terbaik dan efektif untuk<br>
+                kalangan Mahasiswa. Di dalamnya tidak hanya mendapatkan suatu hal yang baru namun juga kita belajar untuk<br>
+                kalangan Mahasiswa. Di dalamnya tidak hanya mendapatkan suatu hal yang baru namun juga kita belajar untuk<br>
+                berpendapat dan juga sekaligus mendapatkan pemahaman yang sangat kompleks. Hal ini bukanlah omong kosong penulis<br>
+                belaka. Bagaimana tidak, berbagai macam otal bertemu secara bersamaan dan berbenturan satu sama lain. Ada yang<br>
+                berargumen A karena B, ada yang berargumen D karena C.<br><br>
+                Berpendapat dan juga sekaligus mendapatkan pemahaman yang sangat kompleks. Hal ini bukanlah omong kosong penulis<br>
+                belaka. Bagaimana tidak, berbagai macam otal bertemu secara bersamaan dan berbenturan satu sama lain. Ada yang<br>
+                berargumen A karena B, ada yang berargumen D karena C.<br><br>
+                Dengan begitu kita tidak memahami sesuatu dengan sempit. Dengan berdiskusi, kita mendapatkan pemahaman yang sangat<br>
+                 luas dan sekaligus menata bahasa kita saat menyampaikan. Wallahu A'lam. 
+
+            </p>
+        </div>
+        <!-- End Tentang -->
 
         <!-- Start Menu Sekunder -->
         <div class="container-full menu-sekunder">
