--- a/kontak-kami.html
+++ b/kontak-kami.html
@@ -16,12 +16,16 @@
         <!-- Start CSS -->
         <link rel="stylesheet" href="../asna-css/css/style.css">
         <!-- Start CSS -->
+
+        <!-- Start JS -->
+        <script src="js/function.js"></script>
+        <!-- Start JS -->
     </head>
     <body>
         <!-- Start Logo -->
         <div class="container logo">
                 <a href="index.html" title="logo Faka Design">
-                <img src="image/logo-faka-web-menulis.jpg" alt="Logo Faka Design" width="300">
+                <img src="image/logo-faka-web-menulis.png" alt="Logo Faka Design" width="300">
                 </a>
             </div> 
             <!-- End Logo -->
