--- a/bukit-itu.html
+++ b/bukit-itu.html
@@ -14,7 +14,7 @@
         <!-- End Description -->
 
         <!-- Start CSS -->
-        <link rel="stylesheet" href="../asna-css/css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <!-- Start CSS -->
         <!-- Start JS -->
         <script src="js/function.js"></script>
