--- a/bukit-itu.html
+++ b/bukit-itu.html
@@ -13,12 +13,13 @@
         <title> Berisi dengan artikel sastra</title>
         <!-- End Description -->
 
-        <!-- Start CSS -->
-        <link rel="stylesheet" href="../css/style.css">
-        <!-- Start CSS -->
+         !-- Start CSS -->
+        <link rel="stylesheet" href="css/style.css">
+        <!-- End CSS -->
+           
         <!-- Start JS -->
         <script src="js/function.js"></script>
-        <!-- Start JS -->
+        <!-- End JS -->
 
     </head>
     <body>
