--- a/malam-sari.html
+++ b/malam-sari.html
@@ -14,11 +14,12 @@
         <!-- End Description -->
 
         <!-- Start CSS -->
-        <link rel="stylesheet" href="../asna-css/css/style.css">
-        <!-- Start CSS -->
+        <link rel="stylesheet" href="css/style.css">
+        <!-- End CSS -->
+            
         <!-- Start JS -->
         <script src="js/function.js"></script>
-        <!-- Start JS -->
+        <!-- End JS -->
 
     </head>
     <body>
