--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -118,7 +118,7 @@
                 <div class="container">
                     <!-- Start Contact -->
                     <div class="menu-sekunder-one">
-                        <h4>Faka Writing</h4>
+                        <h4>World The Animation</h4>
                         <p>Mewadahi Insan Kreatif yang konsisten berproses</p>
                         <p>Email <a href="minahulasna@gmail.com" title="minahulasna@gmail.com">minahulasna@gmail.com</a></p>
                         <p>WhatsApp <a href="tel:+62-815-5561-6717" title="+62-815-5561-6717">+62-815-5561-6717</a></p>
@@ -153,17 +153,17 @@
                         <h4>Media Sosial</h4>
                         <ul>
                             <li>
-                                <a href="https://www.facebook.com/asna3783?ref=bookmarks" title="Facebook - Faka Writing">
+                                <a href="https://www.facebook.com/asna3783?ref=bookmarks" title="Facebook - World The Animation">
                                         <img src="image/facebook_logo_(square).png" alt="Logo Facebook" width="50">
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/minahul_asna/" title="Instagram - Faka Writing">
+                                <a href="https://www.instagram.com/minahul_asna/" title="Instagram - World The Animation">
                                     <img src="image/instagram-logo.png" alt="Logo Instagram" width="50">
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.Twitter.com/minahulasna?s=01" title="Twitter - Faka Writing">
+                                <a href="https://www.Twitter.com/minahulasna?s=01" title="Twitter - World The Animation">
                                     <img src="image/logo-twitter.png" alt="Logo Twitter" width="50">
                                 </a>
                             </li>
