--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
         <div class="container-gandeng">
              <figure class="snip1237 banjar-one">
                 <div class="image">
-                    <img src="image/pohon-kertas.png" alt="sample84"/><i class="ion-ios-star-outline"></i>
-                    <div class="date"><span class="day">20</span><span class="month">Mei</span></div>
+                    <div class="ion-ios-star-outline">
+                        <img src="image/pohon-kertas.png" alt="sample84"/><i class="ion-ios-star-outline"></i>
+                        <div class="date"><span class="day">20</span><span class="month">Mei</span></div>
+                    </div>
                 </div>
                 <figcaption>
                     <h3>Secarik Surat Pepohonan</h3>
